<resources>
    <string name="app_name">Hello Anvil</string>
    <string name="hello_button_text">Say Hello</string>
    <string name="hello_fragment_loading_text">Loading…</string>
    <string name="hello_fragment_failure_text">Loading failed</string>
</resources>
